[tool.poetry]
name = "redisbeat"
version = "0.1.0"
description = ""
authors = ["Liqiang Liu <liqianglau@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jsonpickle = "^3.0.1"
celery = "^5.2.7"
redis = {extras = ["sentinel"], version = "^4.5.4"}
cryptography = "^40.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
